kubernetes/argocd/applications/security/apps/policy-reporter/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: policy-reporter
  namespace: security
  labels:
    route.scope: external
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Security
      url: "https://kyverno.vaderrp.com/"
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: gateway-public
      namespace: network
  hostnames:
    - kyverno.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - name: policy-reporter-ui
          port: 8080
